C Chan NEWS -- history of user-visible changes.

Copyright (C) 2025-2026  Paul J. Lucas.
See the end of the file for license conditions.

-------------------------------------------------------------------------------

* Changes in c_chan 1.0.3

+ Extracted linked list from observers so select can be in more than one list.

+ Now handling spurious wake-ups.


* Changes in c_chan 1.0.2

+ Now using `rand_r` rather than `rand`.


* Changes in c_chan 1.0.1

+ Selecting from a closed, but non-empty, buffered channel now works.


* Changes in c_chan 1.0

+ Initial version.

-------------------------------------------------------------------------------
The file is part of c_chan.

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU Lesser General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU Lesser General Public License
along with this library.  If not, see <http://www.gnu.org/licenses/>.